Add new scoring system
